[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/JosefinSans-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/PauseMenu/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScreen" type="ColorRect" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
color = Color( 0.0509804, 0.101961, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="Control" parent="PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="PauseScreen/Layout"]
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.9

[node name="MainMenu" type="ColorRect" parent="PauseScreen/Layout/Buttons"]
anchor_right = 1.0
anchor_bottom = 0.33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="PauseScreen/Layout/Buttons/MainMenu"]
modulate = Color( 0.0509804, 0.101961, 0.211765, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="ColorRect" parent="PauseScreen/Layout/Buttons"]
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.66
color = Color( 0.407843, 0.407843, 0.407843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="PauseScreen/Layout/Buttons/Settings"]
modulate = Color( 0.0509804, 0.101961, 0.211765, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ColorRect" parent="PauseScreen/Layout/Buttons"]
anchor_top = 0.66
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="PauseScreen/Layout/Buttons/Quit"]
modulate = Color( 0.0509804, 0.101961, 0.211765, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="ColorRect" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
color = Color( 0.211765, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="Control" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.75806
margin_top = 1.75806
margin_right = -1.75806
margin_bottom = 1.75806
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensitivitySetting" type="Control" parent="Settings/Layout"]
anchor_left = 0.33
anchor_top = 0.2
anchor_right = 0.66
anchor_bottom = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Settings/Layout/SensitivitySetting"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 16.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Settings/Layout/SensitivitySetting"]
anchor_right = 0.579
anchor_bottom = 1.162
margin_right = -0.0435486
margin_bottom = 0.00319672
text = "Sensitivity"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseScreen/Layout/Buttons/MainMenu/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PauseScreen/Layout/Buttons/Settings/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PauseScreen/Layout/Buttons/Quit/QuitButton" to="." method="_on_QuitButton_pressed"]
